# collaborative-whiteboard

./: .gitignore  AGENTS.md  BUILD_CONTRACT.md  CLAUDE.md  PRD.md  README.md  SCRATCH.md  docker-compose.yml  package-lock.json  validation-instructions.md
client/: Dockerfile  package.json  vite.config.ts
client/src/: App.tsx  api.ts  authStore.ts  canvasRenderer.test.ts  canvasRenderer.ts  operations.test.ts  operations.ts  types.ts
docs/: api-reference.md  architecture.md  backend-guide.md  data-model.md  deployment.md  frontend-guide.md  tests.md  websocket-protocol.md
logs/: claude-code-session.md  codex-main-from-logs-marker.jsonl  codex-review-1-backend-bugs.jsonl  codex-review-2-frontend-regressions.jsonl  codex-review-3-backend-correctness.jsonl  codex-review-4-frontend-canvas.jsonl  codex-review-6-frontend-bugs.jsonl  notes.md
logs/subagents/: agent-a10b4f5b97c166172.jsonl  agent-a113c495ceddbb485.jsonl  agent-a2551677ae5b61dfd.jsonl  agent-a25de58ea68150385.jsonl  agent-a2931661165380fe0.jsonl  agent-a2ad4e45ac79ec129.jsonl  agent-a3176921fd7a67b27.jsonl  agent-a363832449e26b947.jsonl  agent-a4469891d2e6eb3ac.jsonl  agent-a44d96e5fb1223760.jsonl  agent-a4cad7273f2c9209a.jsonl  agent-a4ea26201dd21e705.jsonl  agent-a58506bef2fe38453.jsonl  agent-a5cb54a2ef2fb0943.jsonl  agent-a60520a5ff485fe4b.jsonl  agent-a61b520cda9c9c0ff.jsonl  (+14 more)
server/: .dockerignore  Dockerfile  pyproject.toml  schema.sql
server/app/: auth.py  canvas.py  db.py  deps.py  main.py  types.py  ws.py
server/tests/: conftest.py  test_auth.py  test_canvas.py  test_ws.py
(+5 files in other folders)
